# agent-os

./: .gitignore  .importlinter  ARCHITECTURE.md  AWESOME-LIST-PRS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  agent.py  benchmark_results.csv  benchmark_summary.csv  circuit_breaker.py  constraint_graphs.py  demo.py  docker-compose.yml  example.py  example_circuit_breaker.py  example_decoupled.py  example_orchestration_ai.py  example_polymorphic_output.py  example_silent_signals.py  generative_ui_engine.py  mute_agent.py  observer.py  pyproject.toml  requirements.txt  setup.py  shadow_mode.py  supervisor_agents.py  telemetry.py  test_agent.py  test_circuit_breaker.py  test_decoupled.py  test_polymorphic_output.py  test_silent_signals.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
amb_core/: broker.py  memory_broker.py  models.py  tracing.py
atr/: __init__.py
benchmark/: README.md
docker/: Dockerfile.sidecar-python
docs/: ABLATION_STUDIES.md  BIBLIOGRAPHY.md  DOCKER_DEPLOYMENT.md  LIMITATIONS.md  NOVELTY_STATEMENT.md  REPRODUCIBILITY.md  api-reference.md  architecture.md  cheatsheet.md  cmvk-algorithm.md  index.md  integrations.md  mcp-tools.md  octane-onboarding.md  quickstart.md  troubleshooting.md  unified-vision.md  visual-architecture.md
emk/: __init__.py  indexer.py  schema.py  sleep_cycle.py  store.py
examples/: README.md  backpressure_demo.py  basic_usage.py  copilot_governed.py  run_secure_bank_sidecar.py  run_untrusted_sidecar.py  secure_bank_agent.py
github-app/: README.md  app.yml  requirements.txt  webhook.py
modules/hypervisor/: README.md  pyproject.toml
modules/hypervisor/benchmarks/: bench_hypervisor.py
modules/hypervisor/benchmarks/results/: BENCHMARKS.md
modules/hypervisor/examples/: demo.py
modules/hypervisor/src/hypervisor/: __init__.py  core.py  models.py
modules/hypervisor/src/hypervisor/audit/: __init__.py  commitment.py  delta.py  gc.py
modules/hypervisor/src/hypervisor/integrations/: __init__.py  cmvk_adapter.py  iatp_adapter.py  nexus_adapter.py
modules/hypervisor/src/hypervisor/liability/: __init__.py  slashing.py  vouching.py
modules/hypervisor/src/hypervisor/reversibility/: registry.py
modules/hypervisor/src/hypervisor/rings/: __init__.py  classifier.py  enforcer.py
modules/hypervisor/src/hypervisor/saga/: __init__.py  orchestrator.py  state_machine.py
modules/hypervisor/src/hypervisor/session/: __init__.py  sso.py
modules/hypervisor/src/hypervisor/verification/: history.py
modules/hypervisor/tests/integration/: test_hypervisor_e2e.py  test_scenarios.py
modules/hypervisor/tests/unit/: test_audit.py  test_liability.py  test_models.py  test_rings.py  test_saga.py  test_session.py  test_slashing.py  test_vfs_substrate.py
notebooks/: 01-hello-agent-os.ipynb  02-episodic-memory-demo.ipynb  03-time-travel-debugging.ipynb  04-cross-model-verification.ipynb  README.md
paper/: PAPER_CHECKLIST.md  PAPER_DRAFT.md  PAPER_OUTLINE.md  README.md  build.sh  draft_main.md  main.md  main.tex  main_anonymous.md  main_anonymous.tex  main_anonymous_arxiv.aux  main_anonymous_arxiv.tex  main_arxiv.tex  references.bib
papers/: generate_arxiv_packages.py
reproducibility/: LIMITATIONS.md  PAPER_APPENDIX.md  README.md  (+2 more)
(+276 files in other folders)
